--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,9 @@ stm32f0xx-hal = { version = "0.18.0", features = ["stm32f072"] }
 name = "RustyBits_EmbassyIntro"
 test = false
 bench = false
+
+[profile.release]
+debug = 2
+codegen-units = 1
+lto = "fat"
+opt-level = "s"
