--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2024"
 [dependencies]
 cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7.5"
-critical-section = "1.2.0"
 defmt = "1.0.1"
 defmt-rtt = "1.0.0"
-embedded-hal = "1.0.0"
-panic-halt = "1.0.0"
-stm32f0xx-hal = { version = "0.18.0", features = ["stm32f072"] }
+embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
+embassy-stm32 = { version = "0.2.0", features = ["defmt", "memory-x", "stm32f072rb", "time-driver-tim2"] }
+embassy-sync = { version = "0.6.2", features = ["defmt"] }
+embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
+panic-probe = { version = "1.0.0", features = ["print-defmt"] }
 
 [[bin]]
 name = "RustyBits_EmbassyIntro"
