--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ defmt = "1.0.1"
 defmt-rtt = "1.0.0"
 embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
 embassy-stm32 = { version = "0.2.0", features = ["defmt", "memory-x", "stm32f072rb", "time-driver-tim2", "exti"] }
-embassy-sync = { version = "0.6.2", features = ["defmt"] }
+embassy-sync = { version = "0.7.0", features = ["defmt"] }
 embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
+embedded-sht3x = "0.1.0"
 panic-probe = { version = "1.0.0", features = ["print-defmt"] }
 
 [[bin]]
